@@ -1,11 +1,8 @@
 package com.github.seregamorph.maven.test.core;
 
 import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
-import java.util.TreeMap;
 
 /**
  * Configuration entity "surefire-cached.json".
@@ -17,37 +14,18 @@ import java.util.TreeMap;
 })
 public class SurefireCachedConfig {
 
-    /**
-     * Properties that should be included into cache key calculation.
-     * <p>
-     * The "env." prefix may be used to resolve environment variables.
-     */
-    private final List<String> inputProperties = new ArrayList<>(Arrays.asList(
-        "java.specification.version"
-    ));
+    static final TestPluginConfig DEFAULT_CONFIG = new TestPluginConfig()
+        .setInputProperties(List.of("java.specification.version"))
+        .setInputIgnoredProperties(List.of())
+        .setCacheExcludes(List.of())
+        .setArtifacts(Map.of());
 
-    /**
-     * Properties that should be excluded from cache key calculation, but included to "surefire-cached-input.json" /
-     * "failsafe-cached-input.json" files.
-     * <p>
-     * The "env." prefix may be used to resolve environment variables.
-     * <p>
-     * The ignored input properties always include "timestamp".
-     * <p>
-     * E.g. "java.version", "os.arch", "os.name", "env.CI", "env.GITHUB_BASE_REF", "env.GITHUB_REF",
-     * "env.GITHUB_RUN_ID", "env.GITHUB_JOB", "env.GITHUB_SHA"
-     */
-    private final List<String> inputIgnoredProperties = new ArrayList<>();
+    private TestPluginConfig common;
+    private TestPluginConfig surefire;
+    private TestPluginConfig failsafe;
 
-    private final TestPluginConfig surefire = new TestPluginConfig();
-    private final TestPluginConfig failsafe = new TestPluginConfig();
-
-    public List<String> getInputProperties() {
-        return inputProperties;
-    }
-
-    public List<String> getInputIgnoredProperties() {
-        return inputIgnoredProperties;
+    public TestPluginConfig getCommon() {
+        return common;
     }
 
     public TestPluginConfig getSurefire() {
@@ -61,11 +39,61 @@ public class SurefireCachedConfig {
     public static class TestPluginConfig {
 
         /**
+         * Properties that should be included into cache key calculation.
+         * <p>
+         * The "env." prefix may be used to resolve environment variables.
+         * <p>
+         * Default is "java.specification.version"
+         */
+        private List<String> inputProperties;
+
+        /**
+         * Properties that should be excluded from cache key calculation, but included to "surefire-cached-input.json" /
+         * "failsafe-cached-input.json" files.
+         * <p>
+         * The "env." prefix may be used to resolve environment variables.
+         * <p>
+         * The ignored input properties always include "timestamp".
+         * <p>
+         * E.g. ["java.version", "os.arch", "os.name", "env.CI", "env.GITHUB_BASE_REF", "env.GITHUB_REF",
+         * "env.GITHUB_RUN_ID", "env.GITHUB_JOB", "env.GITHUB_SHA"]
+         */
+        private List<String> inputIgnoredProperties;
+
+        /**
          * List of "$groupId:$artifactId" for modules that should be excluded from cache key calculation
          */
-        private final List<String> cacheExcludes = new ArrayList<>();
+        private List<String> cacheExcludes;
 
-        private final Map<String, ArtifactsConfig> artifacts = new TreeMap<>();
+        private Map<String, ArtifactsConfig> artifacts;
+
+        public TestPluginConfig setInputProperties(List<String> inputProperties) {
+            this.inputProperties = inputProperties;
+            return this;
+        }
+
+        public TestPluginConfig setInputIgnoredProperties(List<String> inputIgnoredProperties) {
+            this.inputIgnoredProperties = inputIgnoredProperties;
+            return this;
+        }
+
+        public TestPluginConfig setCacheExcludes(List<String> cacheExcludes) {
+            this.cacheExcludes = cacheExcludes;
+            return this;
+        }
+
+        public TestPluginConfig setArtifacts(Map<String, ArtifactsConfig> artifacts) {
+            this.artifacts = artifacts;
+            return this;
+        }
+
+        public List<String> getInputProperties() {
+            return inputProperties;
+        }
+
+        public List<String> getInputIgnoredProperties() {
+            return inputIgnoredProperties;
+        }
 
         public List<String> getCacheExcludes() {
             return cacheExcludes;
@@ -78,7 +106,12 @@ public class SurefireCachedConfig {
 
     public static class ArtifactsConfig {
 
-        private final List<String> includes = new ArrayList<>();
+        private List<String> includes;
+
+        public ArtifactsConfig setIncludes(List<String> includes) {
+            this.includes = includes;
+            return this;
+        }
 
         public List<String> getIncludes() {
             return includes;
